[gd_scene load_steps=5 format=3 uid="uid://dq7jdp27nn6et"]

[ext_resource type="Texture2D" uid="uid://xgdr885besee" path="res://assets/sprites/key.png" id="1_c6m8x"]
[ext_resource type="Script" path="res://scripts/key.gd" id="1_yrwrb"]
[ext_resource type="AudioStream" uid="uid://dwuwr6kc05ncl" path="res://assets/sfx/key_pick_up.wav" id="3_hxcu7"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_o2afb"]
size = Vector2(24, 31)

[node name="Key" type="Area2D"]
z_index = -1
collision_layer = 32
collision_mask = 2
script = ExtResource("1_yrwrb")

[node name="Sprite2D" type="Sprite2D" parent="."]
texture = ExtResource("1_c6m8x")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, -0.5)
shape = SubResource("RectangleShape2D_o2afb")

[node name="KeyPickupSFX" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("3_hxcu7")
bus = &"Active SFX"

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="finished" from="KeyPickupSFX" to="." method="_on_key_pickup_sfx_finished"]
